--- a/src/css/Start.css
+++ b/src/css/Start.css
@@ -1,14 +1,24 @@
 
 /* CLASS SELECTORS */
 
-  .headerContainer {
-    padding-bottom: 12%;
-  }
-
   .road-img {
     display: block;
-    margin: auto;
+    margin: 8% auto;
     width: 90%;
+  }
+
+  /* CONTAINERS */
+
+  .headerContainer {
+    margin: 5% 0 0;
+  }
+
+  .levelsContainer {
+    padding-top: 9%;
+  }
+
+  .mechanicsContainer {
+    margin: 0 20% 5%;
   }
 
   /* ROUNDS IMAGES */
@@ -19,10 +29,10 @@
   }
 
   .round-one {
-    position: absolute;
+    position:absolute;
     width: 20%;
 
-    bottom: 20%;
+    bottom: 60%;
     left: 27%;
   }
 
@@ -30,7 +40,7 @@
     cursor: pointer;
     width: 25%;
     
-    bottom: 18%;
+    bottom: 56%;
     left: 24.5%;
   }
 
@@ -38,23 +48,23 @@
     position: absolute;
     width: 10%;
     
-    left: 15%;
-    top: 92%;
+    left: 17%;
+    top: 50%;
   }
 
   .round-two:hover {
     cursor: pointer;
     width: 14%;
 
-    left: 14%;
-    top: 89%
+    left: 16%;
+    top: 48%
   }
 
   .round-three {
     position: absolute;
     width: 15%;
 
-    top: 115%;
+    top: 65%;
     left: 36%;
   }
 
@@ -62,15 +72,15 @@
     cursor: pointer;
     width: 20%;
 
-    top: 112%;
-    left: 33.5%;
+    top: 62%;
+    left: 34.2%;
   }
 
   .round-four {
     position: absolute;
     width: 20%;
 
-    top: 105%;
+    top: 60%;
     left: 65%;
   }
 
@@ -78,31 +88,30 @@
     cursor: pointer;
     width: 25%;
 
-    top: 100%;
-    left: 63%;
+    top: 54%;
+    left: 62%;
   }
 
   .round-five {
     position: absolute;
-    width: 15%;
+    width: 14%;
 
-    bottom: 25%;
-    left: 73%;
+    bottom: 65%;
+    left: 72%;
   }
 
   .round-five:hover {
     cursor: pointer;
     width: 20%;
     
-    bottom: 23%;
-    left: 70%;
+    bottom: 61%;
+    left: 69.7%;
   }
 
   .side-logo {
-    left: 2%;
-    top: 4%;
+    left: 5%;
     position: absolute;
-    width: 20%;
+    width: 40%;
   }
   
   /* Back to Home Button */
@@ -129,8 +138,7 @@
   touch-action: manipulation;
   white-space: nowrap;
 
-  left: 85%;
-  top: 5%;
+  left: 70%;
 }
 
 .back-btn:hover {
@@ -155,9 +163,4 @@ h2 {
 
 ol, p {
   color: white;
-}
-
-.mechanicsContainer {
-  display: block;
-  margin: 5% 20% 3% 20%;
 }
