--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -20,85 +20,68 @@
 
   /* ClassName Selectors */
 
-  .banner {
-    position: absolute;
-    transform:rotate(25deg);
-    width: 32.5%;
-
-    top: 12%;
-    left: 70.2%;
+  .home-container {
+    background-image: url("../imgfiles/bg-image.png");
+    background-size: 100%;
+    background-repeat: no-repeat;
   }
 
   .jeep {
     position: absolute;
 
-    width: 32%;
-    top: 90%;
-    left: 67%;
+    width: 35%;
+    bottom: 16%;
+    left: 34%;
   }
 
   .logo {
     cursor: pointer;
     display:block;
-    margin: 10% auto 6% auto;
-    width: 35%;
+    margin: 10% 50% 0 38%;
+    width: 25%;
   }
 
   .logo:hover {
     animation: logo-rotate 4s linear 0s 1 normal;
   }
 
-  .stamp {
-    transform: rotate(45deg);
-    position:absolute;
-    right: 70%;
-    bottom: 50%;
-    width: 40%;
-  }
-
-  .tarsier {
-    position: absolute;
-    /*transform:rotate(50deg);*/
-    width: 20%;
-
-    left: 5%;
-    top: 78%;
-  }
-
-  /* Play Button */
-
-  .btn {
-    background-color: #FF4F61;
-    border-radius: 3px;
-    border: 0.04rem solid #F7C700;
-    box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
-    box-sizing: border-box;
+  .play-link {
     color: white;
     cursor: pointer;
-    display: block;
     font-family: 'Chau Philomene One', sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 1.15385;
-    margin: 0 auto;
-    outline: none;
-    padding: 0.3rem 0.5rem;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
+    font-size: 32px;
+    text-shadow: 0.15rem 0.15rem rgba(0, 0, 0, 0.374);
+
+    position: absolute;
+    bottom: 5%;
+    left: 44%;
   }
 
-  .btn:hover {
-    background-color: #5353CD;
-    color: white;
+  .play-link:hover {
+    color: #F7C700;
+    cursor: pointer;
+    font-size: 35px;
+
+    left: 43%;
   }
 
-  .btn:active {
-    background-color: #252154;
-    box-shadow: 0.2rem 0.2rem #F7C700;
+  .play-link:active {
     color: white;
+    cursor: pointer;
+  }
+
+  .star-one {
+    position: absolute;
+    width: 5%;
+
+    bottom: 60%;
+    left: 70%;
+  }
+
+  .star-two {
+    position: absolute;
+    width: 5%;
+
+    bottom: 10%;
+    left: 25%;
   }
