--- a/src/css/LevelStart.css
+++ b/src/css/LevelStart.css
@@ -1,13 +1,3 @@
- body{
-    background-image: url("../imgfiles/levelBG.png");
-    background-repeat: no-repeat;  
-    background-size: 100%;
-}
-
-#logo_game{
-    width: 15%;
-}
-
 /*#content_bg {
     background-image: url("../imgfiles/questionBG.png");
     background-repeat: no-repeat;  
@@ -21,6 +11,11 @@
     margin-left: -100px;
 }*/
 
+/* ID */
+#btn_top{
+    margin-top: 2%;
+}
+
 #content_question {
     margin-top: 5%;
     margin-left: 25%;
@@ -29,20 +24,24 @@
     width:50%;
 }
 
-.question-bg {
-    padding-top: 5%;
+#level-num{
+   font-size: 70px;
+   margin-top: 3px;
+}
+
+#logo_game{
+    width: 15%;
+}
+
+#sun-img {
     position: absolute;
-    width: 60%;
-    z-index: -1;
+    width: 50%;
 
-    top: 20%;
-    right: 20%;
+    right: 70%;
+    bottom: 58%;
 }
 
-.text_qst{
-  /* //  width: 450px; */
-  color: brown;
-}
+/* CLASSES */
 
 .btn-question {
     background-image: url("../imgfiles/btn_question.png");
@@ -53,13 +52,33 @@
     width: 220px;
     height: 55px;
 }
-#btn_top{
-    margin-top: 2%;
+
+.question-bg {
+    padding-top: 5%;
+    position: absolute;
+    width: 60%;
+    z-index: -1;
+    
+    top: 20%;
+    right: 20%;
 }
 
-#level-num{
-   font-size: 70px;
-   margin-top: 3px;
+.star-three {
+    position: absolute;
+    width: 6%;
+
+    left: 83%;
+    bottom: 60%;
 }
 
+.star-four {
+    position: absolute;
+    width: 8%;
 
+    right: 83%;
+    top: 90%;
+}
+
+.text_qst{
+    color: brown;
+  }
