--- a/src/css/LevelStart.css
+++ b/src/css/LevelStart.css
@@ -1,15 +1,3 @@
-/*#content_bg {
-    background-image: url("../imgfiles/questionBG.png");
-    background-repeat: no-repeat;  
-    background-size: 100% 100%;
-    width:700px;
-    height: 525px;
-    position: fixed;
-    top: 40%;
-    left: 33%;
-    margin-top: -100px;
-    margin-left: -100px;
-}*/
 
 /* ID */
 #btn_top{
@@ -17,11 +5,11 @@
 }
 
 #content_question {
-    margin-top: 5%;
-    margin-left: 25%;
+    margin-top: 2%;
+    margin-left: 30%;
     padding-top: 7.5%;
     
-    width:50%;
+    width:40%;
 }
 
 #level-num{
@@ -42,7 +30,16 @@
 }
 
 /* CLASSES */
-
+.btn-modal {
+    background-image: url("../imgfiles/btn_question.png");
+    background-size: 100% 100%;
+    background-color:transparent;
+    border-radius: 0;
+    border: 0.04rem solid transparent;
+    width: 220px;
+    height: 55px;
+    align: center;
+}
 .btn-question {
     background-image: url("../imgfiles/btn_question.png");
     background-size: 100% 100%;
@@ -82,3 +79,5 @@
 .text_qst{
     color: brown;
   }
+
+ 
